name:                scanner
version:             0.3.1
synopsis:            Fast non-backtracking incremental combinator parsing for bytestrings
homepage:            https://github.com/Yuras/scanner
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
copyright:           (c) Yuras Shumovich 2016
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md changelog.md bench/bench.png
description:         Parser combinator library designed to be fast. It doesn't
                     support backtracking.

source-repository head
  type:                git
  location:            git@github.com:Yuras/scanner.git

library
  exposed-modules:     Scanner
                       Scanner.Internal
  other-modules:       Prelude
                       Data.Either
                       Scanner.OctetPredicates
  build-depends:       base <5
                     , fail
                     , bytestring
  hs-source-dirs:      lib, compat
  ghc-options:         -O2
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec, compat
  main-is:             spec.hs
  build-depends:       base
                     , bytestring
                     , hspec
                     , scanner
  other-modules:       Prelude
                       Data.Either
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench, examples, compat
  main-is:             bench.hs
  other-modules:       Redis.Reply
                       Redis.Atto
                       Redis.Zepto
                       Redis.Scanner
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , text
                     , attoparsec
                     , cereal
                     , criterion
                     , scanner
